src/test/deca/context/valid/objet/new.deca
// Description:
//    Test de new
//
// Resultats:
//    
//
// Historique:
//    cree le 14/01/2023

class A {

}

{
    A a = new A();
}